RESOLVED FIXED144260
Fix viewport units in Media Queries
https://bugs.webkit.org/show_bug.cgi?id=144260
Summary Fix viewport units in Media Queries
Yoav Weiss
Reported 2015-04-27 06:41:45 PDT
Fix viewport units in Media Queries
Attachments
Patch (7.50 KB, patch)
2015-04-27 06:51 PDT, Yoav Weiss
no flags
Patch (7.48 KB, patch)
2015-04-27 09:58 PDT, Yoav Weiss
no flags
Yoav Weiss
Comment 1 2015-04-27 06:51:00 PDT
Darin Adler
Comment 2 2015-04-27 09:00:18 PDT
Comment on attachment 251737 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=251737&action=review > Source/WebCore/css/CSSPrimitiveValue.h:202 > unsigned short type = primitiveType(); > - return (type >= CSS_EMS && type <= CSS_PC) || type == CSS_REMS || type == CSS_CHS || isViewportPercentageLength(); > + return isLength(type); Should be done as a 1-liner. > Source/WebCore/css/CSSPrimitiveValue.h:233 > unsigned short type = primitiveType(); > - return type >= CSS_DPPX && type <= CSS_DPCM; > + return isResolution(type); Should be done as a 1-liner.
Yoav Weiss
Comment 3 2015-04-27 09:58:15 PDT
WebKit Commit Bot
Comment 4 2015-04-27 11:43:44 PDT
Comment on attachment 251749 [details] Patch Clearing flags on attachment: 251749 Committed r183404: <http://trac.webkit.org/changeset/183404>
WebKit Commit Bot
Comment 5 2015-04-27 11:43:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.